2015-08-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0.6.

2015-08-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 6.0.5 release.

	* CHANGES: Updated.

2015-08-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r22837 by Matthew Mundell.

	* src/gsad_omp.c (manager_connect): Init html to keep compiler quiet.

2015-07-30  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22934.

	* src/html/classic/omp.xsl (html-create-user-form): Move the Password
	INPUT outside the LABEL, as browsers like Iceweasel 31.7 have focus
	problems when it is inside the LABEL.

2015-07-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22906.

	* src/html/classic/help.xsl (new_alert.html): Add $t and $i.

2015-07-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22902.

	Adjust the email alert inputs to provide defaults that are the same as
	in the past.

	* src/html/classic/omp.xsl (include-message-default)
	(attach-message-default): New variables.
	(html-create-alert-form, html-edit-alert-form): Move subject up.  Add
	a message field for the email include and the email attach.  Remove the
	shared message field.

	* src/gsad_omp.c (append_alert_method_data): Add a special case for
	email data "message", in order to tell between the attach and include
	message.

2015-07-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22872.

	* src/html/classic/help.xsl (new_alert.html): Remove extra heading.  Add
	email section with message and subject format specifiers.

2015-07-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22868.

	* src/html/classic/help.xsl (new_alert.html): Remove extra heading.  Add
	email section with message and subject format specifiers.

2015-07-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22859.

	Add subject and message input for email alerts.
