@@ -1,3 +1,9 @@
+2015-08-03  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	Backport r22956.
+
+	* src/gsad.c (redirect_handler): Support IPv6 redirection case.
+
 2015-08-03  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
